--- a/.gitignore
+++ b/.gitignore
@@ -449,6 +449,7 @@ $RECYCLE.BIN/
 ##
 .vscode/*
 !.vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
+!.vscode/tasks.json
+!.vscode/launch.json
 !.vscode/extensions.json
+.vscode
